--- a/Apps/Cores/Views/Home/index.phtml
+++ b/Apps/Cores/Views/Home/index.phtml
@@ -1,1 +1,6 @@
-content
+<?php
+/* @var $this \Apps\Cores\Views\Layouts\TwoColsLayout */
+$this->setTitle('shit')
+        ->setHeader('Trang chu');
+?>
+
