--- a/Apps/Cores/Views/User/user.phtml
+++ b/Apps/Cores/Views/User/user.phtml
@@ -17,119 +17,127 @@ $this->setTitle('Tài khoản')
     table .fa-folder-open{color: #fbc02d;}
     table .fa-user{color: #ccc;}
     .table .check{margin-top: 10px;}
+
 </style>
 
-<div class="alert alert-actions alert-success">
-    <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-plus"></i> Thêm mới
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="#">Thêm tài khoản</a></li>
-            <li><a href="#">Thêm đơn vị</a></li>
-        </ul>
-    </div>
-    <button type="button" class="btn btn-default"><i class="fa fa-exchange"></i> Chuyển đơn vị</button>
-    <button type="button" class="btn btn-default"><i class="fa fa-trash"></i> Xóa</button>
-</div>
-
-<div class="panel panel-info panel-filter">
-    <div class="panel-heading">
-        <button type="button" class="btn btn-default"><i class="fa fa-dashboard"></i></button>
-        <button type="button" class="btn btn-default active">Lục Nam</button>
-        <button type="button" class="btn btn-default">Yên Thế</button>
-        <div class="panel-actions">
-            <a href="javascript:;"><i class="fa fa-minus-square-o"></i></a>
+<angular ng-controller="userCtrl">
+    <div class="alert alert-actions alert-success">
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-plus"></i> Thêm mới
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">Thêm tài khoản</a></li>
+                <li><a href="#">Thêm đơn vị</a></li>
+            </ul>
         </div>
+        <button type="button" class="btn btn-default"><i class="fa fa-exchange"></i> Chuyển đơn vị</button>
+        <button type="button" class="btn btn-default"><i class="fa fa-trash"></i> Xóa</button>
     </div>
-    <div class="panel-body">
-        <form >
-            <div class="row">
-                <div  class="col-xs-6">
-                    <input type="text" class="form-control" placeholder="Tìm tên"/>
-                </div>
-                <div class="col-xs-3">
-                    <select class="form-control">
-                        <option value="0">--Trạng thái--</option>
-                    </select>
-                </div>
-                <div class="col-xs-3">
-                    <input type="text" class="form-control" placeholder="Đơn vị"/>
-                </div>
+
+    <div class="panel panel-info panel-filter" ng-class="<?php echo "{minimize: !showFilter}" ?>" ng-cloak>
+        <div class="panel-heading">
+            <button type="button" class="btn btn-default" ng-repeat="item in filters" ng-click="setFilter(item)"
+                    ng-class="<?php echo "{active: compareFilter(item, filter)}" ?>">
+                {{item.label}}
+            </button>
+            <div class="panel-actions">
+                <a href="javascript:;" data-toggle="tooltip" data-placement="top" title="Phóng to/Thu nhỏ" ng-click="toggleFilter()">
+                    <i class="fa" ng-class="<?php echo "{'fa-plus-square-o': !showFilter, 'fa-minus-square-o': showFilter}" ?>"></i>
+                </a>
             </div>
-            <h4></h4>
-            <button type="button" class="btn btn-default">Lưu bộ lọc</button>
-            <button type="button" class="btn btn-default">Xóa bộ lọc</button>
-        </form>
+        </div>
+        <div class="panel-body" >
+            <form >
+                <div class="row">
+                    <div  class="col-xs-6">
+                        <input type="text" class="form-control" placeholder="Tìm tên" ng-model="filter.search"/>
+                    </div>
+                    <div class="col-xs-3">
+                        <select class="form-control" ng-model="filter.status">
+                            <option value="-1">--Trạng thái--</option>
+                            <option value="1">Hoạt động</option>
+                            <option value="0">Không hoạt động</option>
+                        </select>
+                    </div>
+                    <div class="col-xs-3">
+                        <input type="text" class="form-control" placeholder="Đơn vị" value="{{filter.dep.depName}}"/>
+                    </div>
+                </div>
+                <h4></h4>
+                <button type="button" class="btn btn-default" ng-click="saveFilter()" ng-disabled="getActiveFilter() != -1">Thêm bộ lọc</button>
+                <button type="button" class="btn btn-default" ng-click="removeFilter()" ng-disabled="getActiveFilter() == -1 || getActiveFilter() == 0">Xóa bộ lọc</button>
+            </form>
+        </div>
+
+
     </div>
 
 
-</div>
+    <h4></h4>
+    <ol class="breadcrumb">
+        <li><button class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="top" title="Quay lại"><i class="fa fa-arrow-left"></i></button></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Library</a></li>
+        <li class="active">Data</li>
+    </ol>
+    <table class="table table-bordered table-hover">
+        <tbody>
+            <tr>
+                <td>
+                    <div class="tbl-row">
+                        <div class="tbl-check">
+                            <label class="check">
+                                <input type="checkbox" />
+                                <before></before>
+                                <after></after>
+                            </label>
+                        </div>
+                        <div class="tbl-type">
+                            <i class="fa fa-2x fa-folder-open"></i>
+                        </div>
+                        <div class="tbl-text">
+                            <a href="javascript:;">Thư mục</a><br>
+                            Tài khoản: 9 | Thư mục: 10
+                        </div>
+                        <div class="btn-group" role="group" aria-label="...">
+                            <button type="button" class="btn btn-outline btn-primary btn-sm">Sửa</button>
+                            <button type="button" class="btn btn-outline btn-danger btn-sm">Xóa</button>
+                        </div>
+                    </div>
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <div class="tbl-row">
+                        <div class="tbl-check">
+                            <label class="check">
+                                <input type="checkbox" />
+                                <before></before>
+                                <after></after>
+                            </label>
+                        </div>
+                        <div class="tbl-type">
+                            <i class="fa fa-2x fa-user"></i>
+                        </div>
+                        <div class="tbl-text">
+                            <a href="javascript:;">Nguyễn Văn A</a><br>
+                            Chuyên viên
+                        </div>
+                        <div class="btn-group" role="group" aria-label="...">
+                            <button type="button" class="btn btn-outline btn-primary btn-sm">Sửa</button>
+                            <button type="button" class="btn btn-outline btn-danger btn-sm">Xóa</button>
+                        </div>
+                    </div>
+                </td>
+            </tr>
 
 
-<h4></h4>
-<ol class="breadcrumb">
-    <li><button class="btn btn-default btn-xs"><i class="fa fa-arrow-left"></i></button></li>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Library</a></li>
-    <li class="active">Data</li>
-</ol>
-<table class="table table-bordered table-hover">
-    <tbody>
-        <tr>
-            <td>
-                <div class="tbl-row">
-                    <div class="tbl-check">
-                        <label class="check">
-                            <input type="checkbox" />
-                            <before></before>
-                            <after></after>
-                        </label>
-                    </div>
-                    <div class="tbl-type">
-                        <i class="fa fa-2x fa-folder-open"></i>
-                    </div>
-                    <div class="tbl-text">
-                        <a href="javascript:;">Thư mục</a><br>
-                        Tài khoản: 9 | Thư mục: 10
-                    </div>
-                    <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="btn btn-outline btn-primary btn-sm">Sửa</button>
-                        <button type="button" class="btn btn-outline btn-danger btn-sm">Xóa</button>
-                    </div>
-                </div>
-            </td>
-
-        </tr>
-        <tr>
-            <td>
-                <div class="tbl-row">
-                    <div class="tbl-check">
-                        <label class="check">
-                            <input type="checkbox" />
-                            <before></before>
-                            <after></after>
-                        </label>
-                    </div>
-                    <div class="tbl-type">
-                        <i class="fa fa-2x fa-user"></i>
-                    </div>
-                    <div class="tbl-text">
-                        <a href="javascript:;">Nguyễn Văn A</a><br>
-                        Chuyên viên
-                    </div>
-                    <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="btn btn-outline btn-primary btn-sm">Sửa</button>
-                        <button type="button" class="btn btn-outline btn-danger btn-sm">Xóa</button>
-                    </div>
-                </div>
-            </td>
-        </tr>
-
-
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</angular>
 
 <script>
     $(function () {
@@ -138,4 +146,79 @@ $this->setTitle('Tài khoản')
         });
     });
 </script>
+<script>
+    $(function () {
+        sb2.controller('userCtrl', ['$scope', '$apply', function ($scope, $apply) {
+                function defaultFilter() {
+                    return {
+                        'search': '',
+                        'status': '-1',
+                        'label': 'Mặc định'
+                    };
+                }
+                ;
+                $scope.showFilter = getCookie('showFilter', false);
+                $scope.filters = getCookie('filters', [defaultFilter()]);
+                $scope.filter = getCookie('filter', defaultFilter());
 
+                $scope.toggleFilter = function () {
+                    $scope.showFilter = !$scope.showFilter;
+                    setCookie('showFilter', $scope.showFilter);
+                };
+
+                $scope.$watchCollection('filters', function () {
+                    if (!$scope.filters)
+                        return;
+                    setCookie('filters', $scope.filters);
+                });
+
+                $scope.$watchCollection('filter', function () {
+                    if (!$scope.filter)
+                        return;
+                    setCookie('filter', $scope.filter);
+                });
+
+                $scope.setFilter = function (filter) {
+                    $scope.filter = $.extend({}, filter);
+                };
+
+                $scope.compareFilter = function (a, b) {
+                    return a.search == b.search && a.status == b.status;
+                };
+
+                $scope.getActiveFilter = function () {
+                    for (var i in $scope.filters) {
+                        var item = $scope.filters[i];
+                        if ($scope.compareFilter(item, $scope.filter)) {
+                            return i;
+                        }
+                    }
+                    return -1;
+                };
+
+                $scope.saveFilter = function () {
+                    var idx = $scope.getActiveFilter();
+                    var filter = $.extend({}, $scope.filter);
+                    delete filter['$$hashKey'];
+
+                    if (idx == -1) {
+                        filter.label = prompt('Đặt tên cho bộ lọc mới');
+                        if (filter.label)
+                            $scope.filters.push(filter);
+                    }
+                };
+
+                $scope.removeFilter = function () {
+                    var idx = $scope.getActiveFilter();
+                    if (idx == -1 || idx == 0)
+                        return;
+                    var filter = $scope.filters[idx];
+                    if (confirm('Xóa bộ lọc ' + filter.label + '?')) {
+                        $scope.filters.splice(idx, 1);
+                        $scope.setFilter(defaultFilter());
+                    }
+                };
+            }]);
+    });
+
+</script>
