--- a/Apps/Cores/Views/List/list.phtml
+++ b/Apps/Cores/Views/List/list.phtml
@@ -15,7 +15,7 @@ $this->setTitle('Danh mục động')
     .layout > .col-xs-8 > .content .actions{position: absolute;top: 0;left: 0;right: 0; height: 50px; line-height: 50px;border-bottom: 1px solid #ccc;padding: 0 10px;background: #eee;}
     .layout > .col-xs-8 > .content .actions input{width: 200px;display: inline-block;}
     .layout > .col-xs-8 > .content .items{position: absolute;top: 50px;bottom: 0;overflow-y: auto;}
-    .table-items td{padding: 0 !important;}
+    .table-items td{padding: 0 !important;vertical-align: middle !important;}
     .table-items td input{display: block;border: none;width: 100%;box-sizing: border-box;outline: none;padding: 0 5px;height: 35px;background: transparent;}
 </style>
 
@@ -65,7 +65,7 @@ $this->setTitle('Danh mục động')
                                 <td><input type="text"/></td>
                                 <td><input type="text"/></td>
                                 <td><input type="text"/></td>
-                                <td class="center"><button type="button" class="btn btn-default" ><i class="fa fa-remove"></i></button></td>
+                                <td class="center"><button type="button" class="btn btn-default btn-xs" ><i class="fa fa-remove"></i></button></td>
                             </tr>
                         <?php endforeach; ?>
                     </tbody>
