--- a/Docroot/themes/sb2/css/custom.css
+++ b/Docroot/themes/sb2/css/custom.css
@@ -117,6 +117,17 @@ before, after {
 }
 .panel.panel-filter .panel-body{
     background: rgba(227, 242, 253, 0.5);
+    transition: ease-in-out all 0.3s;
+}
+.panel.panel-filter .panel-heading{
+    padding-right: 50px;
+}
+.panel.panel-filter.minimize .panel-body{
+    box-sizing: border-box;
+    height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    overflow: hidden;
 }
 .panel .panel-heading{
     position: relative;
@@ -131,5 +142,14 @@ before, after {
 }
 .panel .panel-actions a{
     color: #333;
+    display: inline-block;
+    width: 16px;
 }
+.panel-heading .btn[ng-repeat]{margin-right: 5px;}
 .center{text-align: center;}
+.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover{
+    background-color: #42a5f5;
+    color: white;
+}
+[ng-cloak]{display: none !important;}
+.btn{outline: none !important;}
