add font code user

--- a/Apps/Cores/Views/List/list.phtml
+++ b/Apps/Cores/Views/List/list.phtml
@@ -4,8 +4,7 @@ namespace Apps\Cores\Views\Layouts;
 
 /* @var $this TwoColsLayout */
 
-$this->setTitle('Danh mục động')
-        ->setHeader('Danh mục động');
+$this->setTitle('Danh mục động');
 ?>
 
 <style>
